Re-use compilation tasks